--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -220,6 +220,7 @@ file.reference.mondrian-3.2.0-13661-JS.jar-1=libs\\mondrian-3.2.0-13661-JS.jar
 file.reference.mongo-java-driver-2.7.3.jar=C:\\Program Files\\Jaspersoft\\iReport-5.6.0\\ireport\\modules\\ext\\mongo-java-driver-2.7.3.jar
 file.reference.mongo-java-driver-2.7.3.jar-1=libs\\mongo-java-driver-2.7.3.jar
 file.reference.mysql-connector-java-5.1.45-bin.jar=C:\\Users\\MDAVEL\\OneDrive\\SENAI\\2018-1\\DISCIPLINAS\\DESENVOLVIMENTO DE SISTEMAS\\PROJETO ORDEM DE SERVI\u00c7O\\M\u00d3DULO 2 - PROJETO CONTROLE DE OS\\API - MySql Connector\\mysql-connector-java-5.1.45\\mysql-connector-java-5.1.45-bin.jar
+file.reference.mysql-connector-java-5.1.45-bin.jar-1=libs\\mysql-connector-java-5.1.45-bin.jar
 file.reference.mysql-connector-java-5.1.46.jar=libs\\mysql-connector-java-5.1.46.jar
 file.reference.olap4j-0.9.7.309-JS.jar=C:\\Program Files\\Jaspersoft\\iReport-5.6.0\\ireport\\modules\\ext\\olap4j-0.9.7.309-JS.jar
 file.reference.olap4j-0.9.7.309-JS.jar-1=libs\\olap4j-0.9.7.309-JS.jar
@@ -495,7 +496,8 @@ javac.classpath=\
     ${file.reference.xml-apis.jar-1}:\
     ${file.reference.dom4j-1.6.1.jar-1}:\
     ${file.reference.rs2xml.jar-1}:\
-    ${file.reference.mysql-connector-java-5.1.46.jar}
+    ${file.reference.mysql-connector-java-5.1.46.jar}:\
+    ${file.reference.mysql-connector-java-5.1.45-bin.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
